<resources>
    <string name="app_name">Gasomovil</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_on_bluetooth">Habilitar bluetooth</string>
    <string name="action_off_bluetooth">Deshabilitar bluetooth</string>
    <string name="action_scan">Escanear…</string>
    <string name="menu_send_cmd">Enviar comandos predeterminados</string>
    <string name="menu_clr_scr">Borrar registros en pantalla</string>
    <string name="menu_toggle_obd_mode">Alternar modo simulador / OBD</string>
    <string name="menu_clear_code">Limpiar código</string>
    <string name="title_activity_maps">Map</string>
    <string name="logo">Gasomovil</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Correo electrónico</string>
    <string name="prompt_password">Contraseña</string>
    <string name="prompt_password_repeat">Confirmar contraseña</string>
    <string name="action_sign_in">INICIAR SESIÓN</string>
    <string name="action_sign_in_short">Ingresar</string>
    <string name="action_sign_up">REGISTRARSE</string>
    <string name="action_sign_up_short">Registrar</string>
    <string name="action_send">ENVIAR</string>
    <string name="error_invalid_email">El correo es inválido</string>
    <string name="error_invalid_password">La contraseña es muy corta</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="permission_rationale">"Los permisos de contactos son necesarios para proporcionar
        terminaciones de correo electrónico."
    </string>
    <string name="action_forgen_password">¿OLVIDASTE TU CONTRASEÑA?</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="forgot_password">Solo necesitamos su correo electrónico registrado para enviarle instrucciones de reestablecimiento de contraseña.</string>
    <string name="reset_password">RESTABLECER CONTRASEÑA</string>

    <string name="verify_password">Por tu seguridad, ingresa tu anterior contraseña</string>
    <string name="new_password">Escribe la nueva contraseña</string>

    <string name="action_modify">GUARDAR</string>
    <string name="modify_password">SIGUIENTE</string>
    <string name="brand">Marca</string>
    <string name="model">Modelo</string>
    <string name="year">Año</string>

    <!-- Strings for spinners -->
    <string-array name="brand">
        <item>Nissan</item>
        <item>GM</item>
        <item>Volkswagen</item>
        <item>Toyota</item>
        <item>FCA México</item>
        <item>Honda</item>
        <item>Kia</item>
        <item>Ford</item>
        <item>Mazda</item>
        <item>Hyundai</item>
    </string-array>

    <string-array name="model">
        <item>Modelo</item>
        <item>Modelo2</item>
        <item>Modelo3</item>
    </string-array>

    <string-array name="year">
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
    </string-array>

    <string name="title_activity_nav_perfil">NavPerfilActivity</string>
    <string name="title_activity_modify_perfil">Perfil</string>
    <string name="title_activity_menu_history">Historial</string>
    <string name="title_activity_menu_favourite">Favoritos</string>
    <string name="title_activity_menu_diagnosis">Diagnóstico</string>
    <string name="title_activity_menu_help">Ayuda</string>
    <string name="title_efficiency">Eficiencia</string>
    <string name="title_engine">Motor</string>
    <string name="title_other">Otro</string>
    <string name="title_device">Dispositivo</string>
    <string name="title_faqs">FAQS</string>
    <string name="title_support">Soporte</string>

    <string name="title_fuel_gotitle_fuel_go">Ir</string>
    <string name="title_fuel_charge">Cargar</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras venenatis fermentum hendrerit. Sed dignissim mauris sed tortor gravida venenatis. Integer in egestas turpis. Vestibulum at faucibus risus. Duis ornare magna et placerat egestas. Donec mauris magna, luctus a dictum eu, lobortis quis orci. Integer sit amet magna sapien. Proin consectetur et massa aliquet mattis. In hac habitasse platea dictumst. Donec tempus auctor urna ac pulvinar. Sed auctor sodales nibh, at lacinia lorem viverra at. Aenean tincidunt nulla et sem auctor rhoncus.

Suspendisse feugiat lacus quis massa sodales posuere. Mauris nec turpis non mi molestie feugiat vel at mauris. Duis a leo eros. Sed sagittis velit at fermentum interdum. Integer hendrerit, dui at feugiat vehicula, lectus est consequat ipsum, vitae ullamcorper enim ex non nisi. Cras consequat urna ac dui molestie, vel ullamcorper neque euismod. Cras scelerisque, eros venenatis tincidunt gravida, justo ex ornare enim, non porta diam elit hendrerit sem. Integer dolor magna, lacinia non hendrerit sed, mollis non leo. Phasellus dapibus risus eros, vulputate dignissim lorem eleifend sit amet. Sed lectus leo, consequat at lacinia posuere, posuere non velit.

Vestibulum vel quam eu est dignissim eleifend. Ut non neque est. Nullam odio lacus, venenatis sed placerat vel, tristique sed diam. Vivamus maximus purus sapien, id vestibulum quam rhoncus eget. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sed pretium tellus. In hac habitasse platea dictumst. In vel congue ipsum. Phasellus nec sollicitudin felis, vitae molestie metus. In euismod, turpis in iaculis hendrerit, nisl leo imperdiet urna, vitae luctus ipsum ligula et eros. Nunc vel elementum dui. Cras molestie, velit non pretium volutpat, elit mi sollicitudin quam, at ultricies arcu magna vitae nulla. Donec posuere, erat nec tempus fermentum, justo augue egestas dolor, at egestas dui nisl tristique massa. Phasellus bibendum id nisl aliquam tempor. Etiam tempor nulla a velit auctor egestas quis id sem.

Ut auctor eu nisi vel rhoncus. Donec nibh nulla, ornare consequat rhoncus vel, dapibus et urna. Aenean ac eros ac risus cursus fermentum. Aliquam erat volutpat. Sed pretium efficitur pulvinar. Donec vel magna in metus maximus sagittis et eget quam. Duis vitae velit vel lectus volutpat imperdiet at eget magna. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed laoreet ante nulla, eu faucibus dui cursus nec. Mauris vitae magna eget dui luctus lobortis ac a libero. Vivamus ut dignissim leo. Morbi pulvinar, purus ut vulputate placerat, velit dui hendrerit neque, at dictum diam massa luctus quam. Donec eget venenatis lectus. Nulla iaculis est at pellentesque varius.

Proin euismod sit amet lectus et gravida. Nunc lorem dui, volutpat sed dui at, vestibulum accumsan orci. Cras a nulla vestibulum, feugiat erat a, auctor dui. Quisque ultrices sapien sagittis fringilla finibus. Etiam ac purus a velit faucibus rhoncus. Sed ultrices, orci eget malesuada maximus, tortor magna lacinia urna, a mattis dui diam eget ex. Mauris eget ullamcorper purus, posuere tempus velit. Praesent metus metus, pretium a urna et, sodales congue mi.</string>
    <string name="title_activity_menu_settings">Configuración</string>

    <!-- Bluetooth -->
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="title_activity_menu_devices_list">Dispositivos</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- Devices List -->
    <string name="title_registered_devices">Registrados</string>
    <string name="title_shared_devices">Compartidos</string>
    <string name="devices_list">Dispositivos</string>
    <string name="add_bt_device">Agregar</string>

</resources>
