<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_on_bluetooth"
        android:orderInCategory="100"
        android:title="@string/action_on_bluetooth"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_off_bluetooth"
        android:orderInCategory="100"
        android:title="@string/action_off_bluetooth"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_scan"
        android:orderInCategory="100"
        android:title="@string/action_scan"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_send_cmd"
        android:orderInCategory="100"
        android:title="@string/menu_send_cmd"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_clr_scr"
        android:orderInCategory="100"
        android:title="@string/menu_clr_scr"
        app:showAsAction="never" />
</menu>
